# delsum

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.mxe  LICENSE  README.md  about.toml  algorithms.md  build.sh  build_mxe.sh  licenses.hbs
.github/workflows/: build.yml  docker.yml
delsum-bin/: Cargo.toml
delsum-bin/src/: bin.rs
delsum-lib/: Cargo.toml  README.md
delsum-lib/src/: bitnum.rs  checksum.rs  divisors.rs  endian.rs  factor.rs  keyval.rs  lib.rs  utils.rs
delsum-lib/src/checksum/: endian.rs  mod.rs
delsum-lib/src/checksum/crc/: mod.rs  rev.rs
delsum-lib/src/checksum/fletcher/: mod.rs  rev.rs
delsum-lib/src/checksum/modsum/: mod.rs  rev.rs
delsum-lib/src/crc/: mod.rs  rev.rs
delsum-lib/src/fletcher/: mod.rs  rev.rs
delsum-lib/src/modsum/: mod.rs  rev.rs
delsum-lib/src/polyhash/: mod.rs  rev.rs
delsum-poly/: Cargo.toml  README.md  build.rs
delsum-poly/include/: poly.hh
delsum-poly/src/: lib.rs  poly.cc
delsum-site/: .gitignore  app.scss  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
delsum-site/src/: App.svelte
delsum-site/src/lib/: ChecksumTable.svelte  DeleteButton.svelte  FileRow.svelte  FileRowList.svelte  Hex.svelte  LocalFile.svelte  Model.svelte  ModelList.svelte  ModelRow.svelte  RangeList.svelte  Row.svelte  common.scss  list.ts  message.ts  model.ts  types.ts  worker.ts
delsum-web/: Cargo.toml
delsum-web/src/: lib.rs
delsum-web/wit/: delsum.wit
poly/: Cargo.toml  build.rs
poly/include/: poly.hh
poly/poly_ntl/: poly.cc  poly.hh
poly/src/: lib.rs  poly.cc
scripts/: find_blocks.py  show_blocks.py
src/: bin.rs  bitnum.rs  checksum.rs  factor.rs  keyval.rs  lib.rs
src/checksum/: crc.rs  fletcher.rs  mod.rs  modsum.rs
src/checksum/crc/: mod.rs  rev.rs
src/checksum/fletcher/: mod.rs  rev.rs
src/checksum/modsum/: mod.rs  rev.rs
