[package]
name = "delsum"
version = "0.1.0"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = ["parallel"]

parallel = ["delsum-lib/default", "rayon"]

[workspace]
members = [
    "delsum-poly",
    "delsum-lib",
]

[[bin]]
name = "delsum"
path = "src/bin.rs"

[dependencies]
rayon = { version = "1.1", optional = true }
structopt = "0.3"
delsum-lib = { path = "delsum-lib", default-features = false, version = "0.1" }
