[package]
name = "delsum"
version = "0.2.1"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/8051Enthusiast/delsum"
description = "Reverse Engineer's Toolbox for Checksums"

[features]
default = ["parallel"]

parallel = ["delsum-lib/default", "rayon"]

[workspace]
members = [
    "delsum-poly",
    "delsum-lib",
]

[[bin]]
name = "delsum"
path = "src/bin.rs"

[dependencies]
rayon = { version = "1.8", optional = true }
hex = "0.4"
delsum-lib = { path = "delsum-lib", default-features = false, version = "0.2.0" }
clap = { version = "4.4", features = ["derive"] }
