[package]
name = "delsum"
version = "1.0.0"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/8051Enthusiast/delsum"
description = "Reverse Engineer's Toolbox for Checksums"

[features]
default = ["parallel"]

parallel = ["delsum-lib/default", "rayon"]

[workspace]
members = ["delsum-lib", "delsum-web"]

[[bin]]
name = "delsum"
path = "src/bin.rs"

[dependencies]
rayon = { version = "1.8", optional = true }
hex = "0.4"
delsum-lib = { path = "delsum-lib", default-features = false, version = "1.0.0" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dist]
inherits = "release"
lto = true
strip = "symbols"
codegen-units = 1

[profile.release]
debug = true
