[package]
name = "delsum-bin"
version = "0.1.0"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2018"

[features]
default = ["parallel"]

parallel = ["delsum/parallel", "rayon"]

[[bin]]
name = "delsum"
path = "src/bin.rs"

[dependencies]
rayon = { version = "1.1", optional = true }
structopt = "0.3"
delsum = { path = "..", default-features = false }
