[package]
name = "delsum-lib"
version = "0.1.2"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/8051Enthusiast/delsum"
description = "Library with most functionality for the delsum crate"

[features]
default = ["parallel"]

parallel = ["rayon"]

[dependencies]
num-traits = "0.2"
num-bigint = "0.4"
rayon = { version = "1.1", optional = true }
bitvec = "0.21"
lazy_static = "1.4"
rand = "0.8"
delsum-poly = { path = "../delsum-poly", version = "0.1.2" }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"


[lib]
name = "delsum_lib"
path = "src/lib.rs"
