[package]
name = "delsum-poly"
version = "0.1.0"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "0.5"

[build-dependencies]
cxx-build = "0.5"

[lib]
name="delsum_poly"
