[package]
name = "delsum-poly"
version = "0.1.2"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2018"
license = "MIT"
links = "NTL"
repository = "https://github.com/8051Enthusiast/delsum"
description = "NTL bindings for the delsum crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.2"

[build-dependencies]
cxx-build = "1.0.2"

[lib]
name="delsum_poly"
