[package]
name = "delsum-web"
version = "1.0.0"
authors = ["8051Enthusiast <8051enthusiast@protonmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/8051Enthusiast/delsum"
description = "Reverse Engineer's Toolbox for Checksums"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41.0"
delsum-lib = {version = "1.0.0", path = "../delsum-lib", default-features=false}
